Fix more alignments.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,8 +5,11 @@
 
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 a {
@@ -18,10 +21,9 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 20%;
+  height: 10%;
   width: 100%;
   padding: 3% 2%;
-  margin-bottom: 50px;
 }
 
 .login {
@@ -38,12 +40,15 @@ nav {
 .content-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  margin-top: 10vh;
+  margin: 2vh auto;
+  padding: 5% 2%;
   border: 1px solid black;
-  height: 80%;
   width: 95%;
+}
+
+.content-h1 {
+  margin: 20px auto;
 }
 
 .content-header {
@@ -89,6 +94,11 @@ form button {
   margin-top: 0;
   margin-bottom: auto;
   background-color: #00B7FF;
+}
+
+.match-container {
+  margin: 15px auto;
+  padding: 5px;
 }
 
 .match-container, .match-details {
@@ -205,19 +215,15 @@ textarea[name="content"]{
 }
 
 footer {
-  position: absolute;
-  flex-grow: 1;
   text-align: center;
   width: 100%;
-  height: 2rem;
+  height: 50px;
   font-size: 15px;
-  bottom: 0;
-  left: 0;
   background-color: black;
   color: white;
-  box-shadow: 0px 0px 10px white;
+  box-shadow: 0px 0px 10px gray;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 200;
+  bottom: 0;
 }
